lb.tf
resource "aws_lb" "external-elb" {
  name               = "External-LB"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.manisg.id]
  subnets            = [aws_subnet.public-1.id, aws_subnet.public-2.id]
}

resource "aws_lb_target_group" "external-elb" {
  name     = "ALB-TG"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.manivpc.id
}

resource "aws_lb_target_group_attachment" "external-elb1" {
  target_group_arn = aws_lb_target_group.external-elb.arn
  target_id        = aws_instance.maniinstance1.id
  port             = 80

  depends_on = [
    aws_instance.maniinstance1,
  ]
}
resource "aws_lb_listener" "external-elb" {
  load_balancer_arn = aws_lb.external-elb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.external-elb.arn
  }
}
# Getting the DNS of load balancer 
output "lb_dns_name" { 
 description = "The DNS name of the load balancer"
 value = "${aws_lb.external-elb.dns_name}" 
}
